unpackaged/objects/DFSS_SnapShot_Item__c.object
<CustomObject>
	<fields>
		<fullName>Asset__c</fullName>
		<label>Asset</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Changed__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Changed</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Created__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Created</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Deleted__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Deleted</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Deployed__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Deployed</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Extra_Field__c</fullName>
		<label>Extra Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Field__c</fullName>
		<label>Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Flag1__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag1</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Flag2__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag2</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Flag3__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag3</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Object__c</fullName>
		<label>Object</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Package__c</fullName>
		<label>Package</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Parent__c</fullName>
		<label>Parent</label>
		<referenceTo>DFSS_SnapShot_Push__c</referenceTo>
		<relationshipLabel>SnapShot Items</relationshipLabel>
		<relationshipName>SnapShot_Items</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Problem__c</fullName>
		<label>Problem</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Success__c</fullName>
		<defaultValue>true</defaultValue>
		<label>Success</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>SnapShot Item</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>SnapShot Items</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>